--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,9 +1,7 @@
 
 <h1>Task Manager</h1>
 <p>Description of the task manager</p>
-
-<a href="/tasks/index"> Tasks 1 </a>
-<%= link_to('Tasks 2', {controller: 'tasks', action: 'index'}) %>
-
-<%= link_to('About', {action: 'about', page: 5, id: 20}) %>
+<%= link_to('Categories', categories_path) %> <br />
+<%= link_to('Tasks', tasks_path(page: 1)) %> <br />
+<%= link_to('About', {action: 'about', page: 5, id: 20}) %><br />
 
