--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,7 +5,7 @@
 	
 	<%= link_to("Add New Task", new_task_path, class: 'action new') %>
 	
-	<table class="listing" summary="Task list" style="width: 100%;">
+	<table class="listing" caption="Task list" style="width: 100%;">
 		<tr class="header">
 			<th>#</th>
 			<th>Task</th>
