--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Categories#index</h1>
-<p>Find me in app/views/categories/index.html.erb</p>
+<%= link_to('Back to Homepage', {controller: 'main', action: 'index'}) %><br />
+
+<div class="categories index">
+	<h2>Categories</h2>
+	
+	<%= link_to("Add New Category", new_category_path, class: 'action new') %>
+	
+	<table class="listing" caption="Category list" style="width: 100%;">
+		<tr class="header">
+			<th>#</th>
+			<th>Category</th>
+			<th>Actions</th>
+		</tr>
+		<% @categories.each do |task| %>
+			<tr>
+				<td><%= task.name %></td>
+				<td class="actions">
+					<%= link_to("Show", category_path(task), class: 'action show') %>
+					<%= link_to("Edit", edit_category_path(task), class: 'action edit') %>
+					<%= link_to("Delete", delete_category_path(task), class: 'action delete') %>
+				</td>
+			</tr>
+		<% end %>
+	</table>
+</div>
