--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,2 +1,26 @@
-<h1>Categories#show</h1>
-<p>Find me in app/views/categories/show.html.erb</p>
+<%= link_to("Back to List", tasks_path, class: 'back-link') %>
+
+<div class="categories show">
+	<h2>Show category</h2>
+	
+	<div class="actions">
+		<%= link_to('Edit', edit_category_path(@task)) %>
+		<%= link_to('Delete', delete_category_path(@task)) %>
+	</div>
+	
+	<table caption="category detail view">
+		<tr>
+			<th>Name</th>
+			<td><%= @category.name %></td>
+		</tr>
+		<tr>
+			<th>Created</th>
+			<td><%= @category.created_at %></td>
+		</tr>
+		<tr>
+			<th>Updated</th>
+			<td><%= @category.updated_at %></td>
+		</tr>
+	</table>
+
+</div>
