--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -4,7 +4,7 @@
 	<h2>Edit Category</h2>
 	
 	<%= form_for(@category) do |f| %>
-		<% # url: task_path(@category), method: 'patch' %>
+		<% # url: category_path(@category), method: 'patch' %>
 		
 		<%= render(partial: 'form', locals: {f: f}) %>
 		
