--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,8 +4,8 @@
 	<h2>Show category</h2>
 	
 	<div class="actions">
-		<%= link_to('Edit', edit_category_path(@task)) %>
-		<%= link_to('Delete', delete_category_path(@task)) %>
+		<%= link_to('Edit', edit_category_path(@category)) %>
+		<%= link_to('Delete', delete_category_path(@category)) %>
 	</div>
 	
 	<table caption="category detail view">
