--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to("Back to List", tasks_path, class: 'back-link') %>
+<%= link_to("Back to List", categories_path, class: 'back-link') %>
 
 <div class="categories show">
 	<h2>Show category</h2>
